--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,9 @@
   <head>
     <title>Hermitpicker 9000 (Season 9 Edition)</title>
     <meta charset="utf-8" />
-    <meta name="author" content="reddit: u/the_pwd_is_murder" />
+    <meta name="maintainer" content="reddit: u/hydrostaticcog" />
     <meta name="description" content="Small app to help choose which Hermits to watch." />
-    <meta name="keywords" content="Hermitcraft,Minecraft,Season 7,Youtube,Twitch,Livestream,Videos" />
+    <meta name="keywords" content="Hermitcraft,Minecraft,Season 9,Youtube,Twitch,Livestream,Videos" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="utils.js"></script>
@@ -18,7 +18,7 @@
           <div class="pickimg">&nbsp;</div>
           <H1>Hermitpicker 9000</H1>
           <H2>Season 9 Edition</H2>
-          <p class="clear"><em>(another handy gadget brought to you by <a href="https://reddit.com/u/the_pwd_is_murder">TPIM Enterprises</a>)</em></p>
+          <p class="clear"><em>Currently maintained by <a href="https://reddit.com/u/hydrostaticcog">hydrostaticcog/a>, originally created by TPIM.</em></p>
           <p class="mobile">Mobile users, make your selections and then scroll down to see your results.</p>
           <p class="jswarning">Please ensure that javascript is activated to use this gadget.</p>
 
