--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
           <div class="pickimg">&nbsp;</div>
           <H1>Hermitpicker 9000</H1>
           <H2>Season 9 Edition</H2>
-          <p class="clear"><em>Currently maintained by <a href="https://reddit.com/u/hydrostaticcog">hydrostaticcog/a>, originally created by TPIM.</em></p>
+          <p class="clear"><em>Currently maintained by <a href="https://reddit.com/u/hydrostaticcog">hydrostaticcog</a>, originally created by TPIM.</em></p>
           <p class="mobile">Mobile users, make your selections and then scroll down to see your results.</p>
           <p class="jswarning">Please ensure that javascript is activated to use this gadget.</p>
 
