Add S10 members and season selection

--- a/index.htm
+++ b/index.htm
@@ -154,6 +154,9 @@
               </label>
               <label>
                 <input class="hermitselector" type="checkbox" value="S9" >Season 9</input>
+              </label><br />
+              <label>
+                <input class="hermitselector" type="checkbox" value="S10" >Season 10</input>
               </label>
             </p>
             <!--<p>
